...
        if (meals.isNotEmpty()) {
            LazyVerticalGrid(
                columns = GridCells.Adaptive(160.dp),
                contentPadding = PaddingValues(16.dp),
                horizontalArrangement = Arrangement.spacedBy(16.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
                modifier = modifier.testTag("SearchResult")
            ) {
                items(meals) {
                    SearchResultItem(
                        thumb = it.thumb,
                        name = it.name,
                        price = it.price,
...
